[package]
name = "helium"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.14"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
