[package]
name = "helium"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
cuckoofilter = { version = "0.5.0", features = ["serde", "serde_derive", "serde_bytes"] }
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.14"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.25"
stop-words = "0.8.0"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "process"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
xorf = { version = "0.10.2", features = ["bincode", "serde"] }
