[package]
name = "helium"
version = "0.2.0"
edition = "2021"
exclude = ["/wasm","/template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "io-util", "process"] }
walkdir = "2.5.0"
markdown = "1.0.0-alpha.14"
regex = "1.10.5"
tera = "1.20.0"
serde_json = "1.0.118"
stop-words = "0.8.0"
xorf = { version = "0.10.2", features = ["bincode", "serde"] }
bincode = "1.3.3"
chrono = "0.4.38"
