[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
js-sys = "0.3.65"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Window", "Document", "DomParser", "SupportedType", "Element", "HtmlCollection", "ReadableStreamDefaultReader", "Node", "Location", "console"] }

[dependencies.xorf]
version = "0.10.2"
default-features = false
features = ["serde"]
